fix the double scrollbar in view device

--- a/identity/view/css/style.css
+++ b/identity/view/css/style.css
@@ -105,6 +105,11 @@ main {
 .page-content {margin-top: 70px;}
 .side-bar .nav-pills>li a {padding: 10px 10px;}
   .side-bar .nav li strong {margin-left: 8px;}
+    
+}
+@media (min-width: 992px) {
+.modal-lg {
+    width: 800px;
 }
 .viewDeviceContainer .modal-lg {width: 100%;}
 .viewDeviceContainer .title-header {
@@ -340,7 +345,7 @@ main {
 .identityTheme md-dialog md-dialog-actions{padding: 15px;text-align: right;border-top: 1px solid #e5e5e5;}
 .identityTheme md-dialog md-dialog-actions .md-button {margin: 0 10px 0 0;}
 .identityTheme .md-button.md-default-theme:not([disabled]).md-focused, .identityTheme .md-button:not([disabled]).md-focused, .identityTheme .md-button.md-default-theme:not([disabled]):hover, .identityTheme .md-button:not([disabled]):hover {background-color: #a6cbd0;}
-.identityTheme md-dialog md-dialog-content {min-height: 100px;}
+.identityTheme md-dialog md-dialog-content {min-height: 100px; overflow-x: hidden; overflow-y: auto;}
 .identityTheme md-dialog .title-header {padding: 20px;border-bottom: 1px solid #e5e5e5; position: relative;}
 .identityTheme md-dialog h4 {margin: 0;}
 
